Homework verification 1-6, retooling based on pdfs

--- a/homework/stage03_python-fundamentals/notebooks/stage03_python-fundamentals.ipynb
+++ b/homework/stage03_python-fundamentals/notebooks/stage03_python-fundamentals.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "c9a2727b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "73387bf3",
    "metadata": {},
    "outputs": [
@@ -34,8 +34,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.9 ms ± 950 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "638 μs ± 31.3 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "45.3 ms ± 609 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "793 μs ± 4.31 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "c4a945b2",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "54ea6765",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,8 @@
    "source": [
     "#bonus plot\n",
     "df = pd.read_csv('../data/processed/summary.csv')\n",
-    "\n",
+    "if not os.path.exists('../data/plots'):\n",
+    "    os.makedirs('../data/plots')\n",
     "plt.plot(df['category'], df['value'])\n",
     "plt.title('Average Value vs Category')\n",
     "plt.xlabel('Category')\n",
