--- a/homework/stage04_data-acquisition-and-ingestion/notebooks/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
+++ b/homework/stage04_data-acquisition-and-ingestion/notebooks/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
     "from bs4 import BeautifulSoup\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "RAW = pathlib.Path('data/raw'); RAW.mkdir(parents=True, exist_ok=True)\n",
+    "RAW = pathlib.Path('../data/raw'); RAW.mkdir(parents=True, exist_ok=True)\n",
     "load_dotenv(); print('ALPHAVANTAGE_API_KEY loaded?', bool(os.getenv('ALPHAVANTAGE_API_KEY')))"
    ]
   },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "{'missing': [], 'shape': (100, 2), 'na_total': 0}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved data/raw/api_source-alpha_symbol-AAPL_20250820-103003.csv\n"
+      "Saved ../data/raw/api_source-alpha_symbol-AAPL_20250820-183541.csv\n"
      ]
     }
    ],
@@ -154,23 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['NEGG', 'Newegg Commerce, Inc.', '', '101.41+12.01(+13.47%)', '+12.01', '+13.47%', '467,170', '1.136M', '1.975B', '--', '+419.77%', ''], ['VKTX', 'Viking Therapeutics, Inc.', '', '25.94+1.58(+6.49%)', '+1.58', '+6.49%', '9.135M', '4.857M', '2.917B', '--', '-62.38%', ''], ['HTHT', 'H World Group Limited', '', '35.17+1.82(+5.44%)', '+1.82', '+5.44%', '1.407M', '1.763M', '10.794B', '24.59', '+16.94%', ''], ['COCO', 'The Vita Coco Company, Inc.', '', '35.83+1.89(+5.57%)', '+1.89', '+5.57%', '345,220', '645,720', '2.036B', '33.49', '+33.89%', ''], ['TJX', 'The TJX Companies, Inc.', '', '140.76+6.14(+4.56%)', '+6.14', '+4.56%', '3.953M', '5.24M', '157.029B', '33.12', '+11.97%', ''], ['MDT', 'Medtronic plc', '', '93.56+3.65(+4.07%)', '+3.65', '+4.07%', '3M', '8.067M', '119.868B', '25.92', '+2.70%', ''], ['PPC', \"Pilgrim's Pride Corporation\", '', '47.46+1.77(+3.86%)', '+1.77', '+3.86%', '345,299', '1.205M', '11.273B', '9.14', '+8.69%', ''], ['AS', 'Amer Sports, Inc.', '', '36.84+1.10(+3.08%)', '+1.10', '+3.08%', '1.995M', '4.176M', '20.43B', '99.57', '+152.58%', ''], ['NGD', 'New Gold Inc.', '', '5.30+0.16(+3.22%)', '+0.16', '+3.22%', '3.468M', '19.775M', '4.209B', '26.48', '+90.71%', ''], ['UA', 'Under Armour, Inc.', '', '5.11+0.11(+2.20%)', '+0.11', '+2.20%', '1.377M', '3.724M', '2.21B', '23.23', '-38.27%', '']]\n"
+      "[['NEGG', 'Newegg Commerce, Inc.', '', '110.64+21.24(+23.76%)', '+21.24', '+23.76%', '1.577M', '1.136M', '2.155B', '--', '+419.77%', ''], ['LNZA', 'LanzaTech Global, Inc.', '', '23.28+3.56(+18.05%)', '+3.56', '+18.05%', '126,383', '28,794', '54.001M', '--', '-88.26%', ''], ['SRRK', 'Scholar Rock Holding Corporation', '', '34.40+4.29(+14.26%)', '+4.29', '+14.26%', '5.374M', '1.417M', '3.307B', '--', '+225.27%', ''], ['STEM', 'Stem, Inc.', '', '16.47+1.93(+13.27%)', '+1.93', '+13.27%', '589,501', '521,463', '137.674M', '--', '+15.21%', ''], ['MCRB', 'Seres Therapeutics, Inc.', '', '17.94+1.69(+10.40%)', '+1.69', '+10.40%', '130,131', '119,888', '157.057M', '--', '-7.04%', ''], ['GDS', 'GDS Holdings Limited', '', '33.90+2.31(+7.31%)', '+2.31', '+7.31%', '3.427M', '2.151M', '6.756B', '308.18', '+114.02%', ''], ['CVI', 'CVR Energy, Inc.', '', '28.89+1.88(+6.96%)', '+1.88', '+6.96%', '2.319M', '1.173M', '2.904B', '--', '+9.75%', ''], ['ADI', 'Analog Devices, Inc.', '', '244.87+14.43(+6.26%)', '+14.43', '+6.26%', '8.48M', '3.687M', '121.516B', '66.36', '+1.29%', ''], ['FUTU', 'Futu Holdings Limited', '', '178.66+10.12(+6.01%)', '+10.12', '+6.01%', '5.366M', '2.349M', '24.874B', '29.93', '+168.90%', ''], ['COCO', 'The Vita Coco Company, Inc.', '', '35.92+1.98(+5.83%)', '+1.98', '+5.83%', '1.089M', '645,720', '2.041B', '33.57', '+33.89%', ''], ['WULF', 'TeraWulf Inc.', '', '9.28+0.50(+5.69%)', '+0.50', '+5.69%', '65.432M', '54.569M', '3.639B', '--', '+82.92%', ''], ['NEXT', 'NextDecade Corporation', '', '10.03+0.54(+5.69%)', '+0.54', '+5.69%', '2.554M', '2.609M', '2.628B', '--', '+91.33%', ''], ['LEU', 'Centrus Energy Corp.', '', '175.99+9.41(+5.65%)', '+9.41', '+5.65%', '1.532M', '1.481M', '3.204B', '28.57', '+320.13%', ''], ['IREN', 'IREN Limited', '', '19.76+1.03(+5.50%)', '+1.03', '+5.50%', '23.911M', '24.277M', '4.779B', '--', '+115.78%', ''], ['VKTX', 'Viking Therapeutics, Inc.', '', '25.69+1.33(+5.46%)', '+1.33', '+5.46%', '23.598M', '4.857M', '2.889B', '--', '-62.38%', ''], ['HTHT', 'H World Group Limited', '', '35.16+1.81(+5.43%)', '+1.81', '+5.43%', '5.263M', '1.763M', '10.792B', '24.59', '+16.94%', ''], ['AXSM', 'Axsome Therapeutics, Inc.', '', '116.99+5.70(+5.12%)', '+5.70', '+5.12%', '663,536', '629,187', '5.838B', '--', '+26.60%', ''], ['BZ', 'Kanzhun Limited', '', '22.08+1.01(+4.79%)', '+1.01', '+4.79%', '7.644M', '3.233M', '10.105B', '38.74', '+45.51%', ''], ['RIOT', 'Riot Platforms, Inc.', '', '12.52+0.56(+4.68%)', '+0.56', '+4.68%', '37.86M', '39.575M', '4.628B', '--', '+43.23%', ''], ['ABVX', 'ABIVAX Société Anonyme', '', '71.89+2.93(+4.25%)', '+2.93', '+4.25%', '1.997M', '1.341M', '5.506B', '--', '+497.06%', ''], ['SITM', 'SiTime Corporation', '', '221.60+8.83(+4.15%)', '+8.83', '+4.15%', '426,959', '352,279', '5.762B', '--', '+49.40%', ''], ['AS', 'Amer Sports, Inc.', '', '37.17+1.43(+4.00%)', '+1.43', '+4.00%', '7.957M', '4.176M', '20.613B', '100.46', '+152.58%', ''], ['BMNR', 'Bitmine Immersion Technologies, Inc.', '', '52.06+2.28(+4.58%)', '+2.28', '+4.58%', '52.896M', '32.415M', '9.032B', '--', '+542.32%', ''], ['MCK', 'McKesson Corporation', '', '702.94+26.03(+3.85%)', '+26.03', '+3.85%', '1.063M', '759,887', '87.434B', '28.14', '+21.26%', ''], ['NU', 'Nu Holdings Ltd.', '', '13.62+0.50(+3.81%)', '+0.50', '+3.81%', '82.847M', '64.361M', '65.817B', '28.98', '-8.89%', '']]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'missing': [], 'shape': (10, 12), 'na_total': 10}"
+       "{'missing': [], 'shape': (25, 12), 'na_total': 25}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved data/raw/scrape_site-yahoo_finance_table-gainers_20250820-103004.csv\n"
+      "Saved ../data/raw/scrape_site-yahoo_finance_table-gainers_20250820-183542.csv\n"
      ]
     }
    ],
