--- a/homework/stage05_data-storage/notebooks/stage05_data-storage_homework-starter.ipynb
+++ b/homework/stage05_data-storage/notebooks/stage05_data-storage_homework-starter.ipynb
@@ -90,31 +90,31 @@
        "      <th>0</th>\n",
        "      <td>2024-01-01</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>149.496109</td>\n",
+       "      <td>149.927393</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2024-01-02</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>148.189220</td>\n",
+       "      <td>151.880560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2024-01-03</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>148.089733</td>\n",
+       "      <td>149.222222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2024-01-04</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>150.195792</td>\n",
+       "      <td>149.792542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2024-01-05</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>148.559628</td>\n",
+       "      <td>149.319364</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -122,11 +122,11 @@
       ],
       "text/plain": [
        "        date ticker       price\n",
-       "0 2024-01-01   AAPL  149.496109\n",
-       "1 2024-01-02   AAPL  148.189220\n",
-       "2 2024-01-03   AAPL  148.089733\n",
-       "3 2024-01-04   AAPL  150.195792\n",
-       "4 2024-01-05   AAPL  148.559628"
+       "0 2024-01-01   AAPL  149.927393\n",
+       "1 2024-01-02   AAPL  151.880560\n",
+       "2 2024-01-03   AAPL  149.222222\n",
+       "3 2024-01-04   AAPL  149.792542\n",
+       "4 2024-01-05   AAPL  149.319364"
       ]
      },
      "execution_count": 2,
@@ -160,7 +160,7 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('data/processed/sample_20250820-103343.parquet')"
+       "PosixPath('../data/processed/sample_20250820-183601.parquet')"
       ]
      },
      "execution_count": 3,
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9c316884",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,8 @@
    "source": [
     "## 5 Documentation\n",
     "- Validation checks include comparing df after and saving for both pq and csv (validate_loaded).  \n",
-    "- Assumptions include parquet is working properly (proper installation needed) and any data typing done through parquet over CSV is correct (implicit vs explicit).\n"
+    "- Assumptions include parquet is working properly (proper installation needed) and any data typing done through parquet over CSV is correct (implicit vs explicit).\n",
+    "- README is updated in global"
    ]
   }
  ],
