--- a/project/notebooks/api_scrape_data.ipynb
+++ b/project/notebooks/api_scrape_data.ipynb
@@ -5,19 +5,19 @@
    "id": "9ca563d0",
    "metadata": {},
    "source": [
-    "# Homework Starter — Stage 04: Data Acquisition and Ingestion\n",
-    "Name: \n",
+    "# Project — Data Acquisition and Ingestion\n",
+    "Owner: \n",
     "Date: \n",
     "\n",
-    "## Objectives\n",
-    "- API ingestion with secrets in `.env`\n",
-    "- Scrape a permitted public table\n",
-    "- Validate and save raw data to `data/raw/`"
+    "## Goals\n",
+    "- Pull daily equity prices from a reproducible API (Alpha Vantage free tier or yfinance fallback) with secrets via `.env`.\n",
+    "- Scrape a permitted public table to augment market context (e.g., Yahoo Finance Gainers).\n",
+    "- Validate schemas and persist timestamped raw files under `data/raw/` near this notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "fdcdcc4c",
    "metadata": {},
    "outputs": [
@@ -45,12 +45,13 @@
    "id": "d7423b40",
    "metadata": {},
    "source": [
-    "## Helpers (use or modify)"
+    "## Utilities\n",
+    "Helper functions for timestamps, validation, and IO. Prefer explicit schema checks at ingestion time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "cfe3adc0",
    "metadata": {},
    "outputs": [],
@@ -75,13 +76,14 @@
    "id": "e752104d",
    "metadata": {},
    "source": [
-    "## Part 1 — API Pull (Required)\n",
-    "Choose an endpoint (e.g., Alpha Vantage or use `yfinance` fallback)."
+    "## API Pull\n",
+    "- Source: Alpha Vantage TIME_SERIES_DAILY (fallback: yfinance)\n",
+    "- Notes: respect rate limits; persist only `date` and `close` for free-tier parity; cast dtypes explicitly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "e6e84ee9",
    "metadata": {
     "lines_to_next_cell": 2
@@ -100,7 +102,7 @@
        "{'missing': [], 'shape': (100, 2), 'na_total': 0}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "9586f02e",
    "metadata": {},
    "outputs": [
@@ -145,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved data/raw/api_source-alpha_symbol-AAPL_20250818-095417.csv\n"
+      "Saved data/raw/api_source-alpha_symbol-AAPL_20250820-114423.csv\n"
      ]
     }
    ],
@@ -158,13 +160,15 @@
    "id": "e5f26c72",
    "metadata": {},
    "source": [
-    "## Part 2 — Scrape a Public Table (Required)\n",
-    "Replace `SCRAPE_URL` with a permitted page containing a simple table."
+    "## Web Scrape\n",
+    "- Target: permitted public table (e.g., Yahoo Finance Gainers)\n",
+    "- Risks: layout and selector drift; inconsistent number formats; robots and legal constraints.\n",
+    "- Mitigation: user-agent header, numeric coercion, capture full raw HTML when parsing fails."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "0e52fd26",
    "metadata": {},
    "outputs": [
@@ -172,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['PPCB', 'Propanc Biopharma, Inc. Common Stock', '', '8.37+5.50(+190.98%)', '+5.50', '+190.98%', '31.456M', '10,072', '97.191M', '--', '+239,066.67%', ''], ['DAY', 'Dayforce Inc', '', '66.44+13.56(+25.69%)', '+13.56', '+25.69%', '2.813M', '1.843M', '10.611B', '221.48', '-4.84%', ''], ['WULF', 'TeraWulf Inc.', '', '10.11+1.14(+12.71%)', '+1.14', '+12.71%', '41.58M', '51.801M', '3.965B', '--', '+106.21%', ''], ['RUN', 'Sunrun Inc.', '', '15.38+1.45(+10.45%)', '+1.45', '+10.45%', '16.63M', '24.218M', '3.548B', '--', '-31.29%', ''], ['HSAI', 'Hesai Group', '', '27.50+1.91(+7.46%)', '+1.91', '+7.46%', '1.01M', '3.431M', '3.643B', '250.00', '+464.90%', ''], ['WBTN', 'WEBTOON Entertainment Inc.', '', '16.13+1.16(+7.75%)', '+1.16', '+7.75%', '251,383', '561,338', '2.107B', '--', '+14.62%', ''], ['NXT', 'Nextracker Inc.', '', '65.50+4.92(+8.12%)', '+4.92', '+8.12%', '1.442M', '2.503M', '9.942B', '17.85', '+50.40%', ''], ['DUOL', 'Duolingo, Inc.', '', '351.99+25.06(+7.67%)', '+25.06', '+7.67%', '632,434', '1.198M', '16.129B', '143.67', '+57.80%', ''], ['NWL', 'Newell Brands Inc.', '', '5.86+0.40(+7.42%)', '+0.40', '+7.42%', '935,153', '9.22M', '2.458B', '--', '-26.22%', ''], ['ALVO', 'Alvotech', '', '8.58+0.55(+6.91%)', '+0.55', '+6.91%', '386,428', '295,959', '2.673B', '37.30', '-38.22%', ''], ['FSLR', 'First Solar, Inc.', '', '214.12+14.17(+7.09%)', '+14.17', '+7.09%', '2.111M', '4.116M', '22.964B', '18.30', '-12.45%', ''], ['KC', 'Kingsoft Cloud Holdings Limited', '', '14.39+0.81(+5.96%)', '+0.81', '+5.96%', '552,418', '1.902M', '4.047B', '--', '+436.76%', ''], ['MNSO', 'MINISO Group Holding Limited', '', '20.88+1.15(+5.83%)', '+1.15', '+5.83%', '107,896', '910,258', '6.38B', '18.98', '+26.39%', ''], ['NVO', 'Novo Nordisk A/S', '', '54.33+2.50(+4.83%)', '+2.50', '+4.83%', '11.678M', '14.432M', '234.578B', '13.86', '-61.25%', ''], ['APLD', 'Applied Digital Corporation', '', '14.94+0.85(+6.00%)', '+0.85', '+6.00%', '14.76M', '49.797M', '3.906B', '--', '+242.82%', ''], ['CAR', 'Avis Budget Group, Inc.', '', '163.71+8.08(+5.19%)', '+8.08', '+5.19%', '124,857', '1.295M', '5.762B', '--', '+75.08%', ''], ['ENPH', 'Enphase Energy, Inc.', '', '36.41+1.57(+4.51%)', '+1.57', '+4.51%', '3.682M', '9.266M', '4.761B', '28.22', '-70.90%', ''], ['ELF', 'e.l.f. Beauty, Inc.', '', '121.78+5.40(+4.64%)', '+5.40', '+4.64%', '215,946', '2.545M', '6.909B', '72.06', '-27.31%', ''], ['AMRN', 'Amarin Corporation plc', '', '16.40+0.75(+4.81%)', '+0.75', '+4.81%', '16,948', '110,720', '339.198M', '--', '+16.79%', ''], ['GDS', 'GDS Holdings Limited', '', '32.65+1.24(+3.95%)', '+1.24', '+3.95%', '395,285', '2.105M', '6.432B', '296.82', '+135.10%', ''], ['PCTY', 'Paylocity Holding Corporation', '', '177.44+5.48(+3.19%)', '+5.48', '+3.19%', '101,119', '541,066', '9.788B', '44.14', '+13.12%', ''], ['CELH', 'Celsius Holdings, Inc.', '', '59.47+2.17(+3.79%)', '+2.17', '+3.79%', '1.88M', '6.792M', '15.34B', '156.50', '+37.87%', ''], ['ALHC', 'Alignment Healthcare, Inc.', '', '15.55+0.50(+3.33%)', '+0.50', '+3.33%', '115,799', '3.422M', '3.08B', '--', '+75.20%', ''], ['CNC', 'Centene Corporation', '', '29.42+0.93(+3.26%)', '+0.93', '+3.26%', '2.101M', '14.124M', '14.449B', '7.14', '-63.61%', ''], ['USM', 'Array Digital Infrastructure, Inc.', '', '77.01+2.76(+3.72%)', '+2.76', '+3.72%', '1M', '316,295', '6.623B', '--', '+41.26%', '']]\n"
+      "[['NEGG', 'Newegg Commerce, Inc.', '', '110.47+21.07(+23.57%)', '+21.07', '+23.57%', '847,086', '1.136M', '2.152B', '--', '+419.77%', ''], ['LNZA', 'LanzaTech Global, Inc.', '', '23.21+3.49(+17.70%)', '+3.49', '+17.70%', '45,606', '28,794', '53.839M', '--', '-88.26%', ''], ['SRRK', 'Scholar Rock Holding Corporation', '', '33.84+3.73(+12.40%)', '+3.73', '+12.40%', '1.791M', '1.417M', '3.253B', '--', '+225.27%', ''], ['VKTX', 'Viking Therapeutics, Inc.', '', '26.02+1.66(+6.81%)', '+1.66', '+6.81%', '14.5M', '4.857M', '2.926B', '--', '-62.38%', ''], ['MCRB', 'Seres Therapeutics, Inc.', '', '17.27+1.02(+6.25%)', '+1.02', '+6.25%', '22,100', '119,888', '151.149M', '--', '-7.04%', ''], ['COCO', 'The Vita Coco Company, Inc.', '', '35.99+2.05(+6.04%)', '+2.05', '+6.04%', '424,987', '645,720', '2.045B', '33.64', '+33.89%', ''], ['HTHT', 'H World Group Limited', '', '35.10+1.76(+5.26%)', '+1.76', '+5.26%', '2.476M', '1.763M', '10.775B', '24.55', '+16.94%', ''], ['STEM', 'Stem, Inc.', '', '15.60+1.06(+7.25%)', '+1.06', '+7.25%', '149,831', '521,463', '130.401M', '--', '+15.21%', ''], ['CVI', 'CVR Energy, Inc.', '', '28.30+1.29(+4.78%)', '+1.29', '+4.78%', '574,533', '1.173M', '2.845B', '--', '+9.75%', ''], ['MDT', 'Medtronic plc', '', '93.75+3.85(+4.29%)', '+3.85', '+4.29%', '5.484M', '8.067M', '120.125B', '25.97', '+2.70%', ''], ['ADI', 'Analog Devices, Inc.', '', '239.87+9.43(+4.09%)', '+9.43', '+4.09%', '3.902M', '3.687M', '119.035B', '65.01', '+1.29%', ''], ['AS', 'Amer Sports, Inc.', '', '37.25+1.51(+4.22%)', '+1.51', '+4.22%', '3.46M', '4.176M', '20.658B', '100.68', '+152.58%', ''], ['WULF', 'TeraWulf Inc.', '', '9.13+0.35(+3.99%)', '+0.35', '+3.99%', '35.536M', '54.569M', '3.58B', '--', '+82.92%', ''], ['NU', 'Nu Holdings Ltd.', '', '13.59+0.47(+3.54%)', '+0.47', '+3.54%', '33.848M', '64.361M', '65.647B', '28.90', '-8.89%', ''], ['TGS', 'Transportadora de Gas del Sur S.A.', '', '28.03+0.96(+3.55%)', '+0.96', '+3.55%', '153,569', '337,948', '4.444B', '17.52', '+43.46%', ''], ['GDS', 'GDS Holdings Limited', '', '32.65+1.06(+3.35%)', '+1.06', '+3.35%', '1.448M', '2.151M', '6.507B', '296.80', '+114.02%', ''], ['DOW', 'Dow Inc.', '', '24.31+0.78(+3.31%)', '+0.78', '+3.31%', '6.769M', '14.257M', '17.232B', '--', '-55.56%', ''], ['REGN', 'Regeneron Pharmaceuticals, Inc.', '', '590.88+19.10(+3.34%)', '+19.10', '+3.34%', '477,044', '1.168M', '62.626B', '14.89', '-51.76%', ''], ['BMA', 'Banco Macro S.A.', '', '67.88+2.18(+3.31%)', '+2.18', '+3.31%', '152,416', '327,317', '4.616B', '--', '+17.28%', ''], ['LEU', 'Centrus Energy Corp.', '', '173.00+6.42(+3.85%)', '+6.42', '+3.85%', '732,616', '1.481M', '3.15B', '28.08', '+320.13%', ''], ['TJX', 'The TJX Companies, Inc.', '', '138.87+4.25(+3.16%)', '+4.25', '+3.16%', '5.405M', '5.24M', '154.926B', '32.68', '+11.97%', ''], ['PPC', \"Pilgrim's Pride Corporation\", '', '47.15+1.46(+3.20%)', '+1.46', '+3.20%', '503,097', '1.205M', '11.2B', '9.08', '+8.69%', ''], ['SBRA', 'Sabra Health Care REIT, Inc.', '', '19.51+0.60(+3.17%)', '+0.60', '+3.17%', '1.106M', '2.572M', '4.678B', '25.67', '+16.58%', ''], ['INFY', 'Infosys Limited', '', '17.11+0.51(+3.10%)', '+0.51', '+3.10%', '12.46M', '13.895M', '70.946B', '22.23', '-26.45%', ''], ['LYB', 'LyondellBasell Industries N.V.', '', '55.39+1.57(+2.92%)', '+1.57', '+2.92%', '1.433M', '4.527M', '17.816B', '117.85', '-44.46%', '']]\n"
      ]
     },
     {
@@ -181,7 +185,7 @@
        "{'missing': [], 'shape': (25, 12), 'na_total': 25}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "0beb3d50",
    "metadata": {},
    "outputs": [
@@ -221,7 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved data/raw/scrape_site-yahoo_finance_table-gainers_20250818-095418.csv\n"
+      "Saved data/raw/scrape_site-yahoo_finance_table-gainers_20250820-114424.csv\n"
      ]
     }
    ],
@@ -231,14 +235,67 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89624132",
+   "metadata": {},
+   "source": [
+    "## Kaggle Dataset Download\n",
+    "- Source: Kaggle API via `kagglehub`\n",
+    "- Target: Credit Card Fraud Detection dataset (mlg-ulb/creditcardfraud)\n",
+    "- Notes: Download latest version; dataset includes 285K+ transactions with 31 features for fraud classification.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0dc15734",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.8), please consider upgrading to the latest version (0.3.12).\n",
+      "Dataset shape: (284807, 31)\n",
+      "Columns: ['Time', 'V1', 'V2', 'V3', 'V4', 'V5', 'V6', 'V7', 'V8', 'V9', 'V10', 'V11', 'V12', 'V13', 'V14', 'V15', 'V16', 'V17', 'V18', 'V19', 'V20', 'V21', 'V22', 'V23', 'V24', 'V25', 'V26', 'V27', 'V28', 'Amount', 'Class']\n",
+      "Saved to: ../data/raw/fraud_kaggle_creditcard_20250820-114449.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install dependencies as needed:\n",
+    "# pip install kagglehub[pandas-datasets]\n",
+    "import kagglehub\n",
+    "from kagglehub import KaggleDatasetAdapter\n",
+    "import pandas as pd\n",
+    "import datetime as dt\n",
+    "\n",
+    "# Load the latest version\n",
+    "df = kagglehub.load_dataset(\n",
+    "    KaggleDatasetAdapter.PANDAS,\n",
+    "    \"mlg-ulb/creditcardfraud\",\n",
+    "    \"creditcard.csv\"\n",
+    ")\n",
+    "\n",
+    "print(\"Dataset shape:\", df.shape)\n",
+    "print(\"Columns:\", df.columns.tolist())\n",
+    "\n",
+    "# Save to your existing RAW directory\n",
+    "timestamp = dt.datetime.now().strftime('%Y%m%d-%H%M%S')\n",
+    "output_path = os.getenv('DATA_DIR_RAW')+  \"/\"+ f\"fraud_kaggle_creditcard_{timestamp}.csv\"\n",
+    "df.to_csv(output_path, index=False)\n",
+    "print(f\"Saved to: {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8b3f1c98",
    "metadata": {},
    "source": [
-    "## Documentation\n",
-    "- API Source: https://www.alphavantage.co/query with params TIME_SERIES_DAILY for funciotn type, AAPL for symbol, compact outputsize, and my free tier api key\n",
-    "- Scrape Source: https://finance.yahoo.com/gainers -> table of top gainers in the market\n",
-    "- Assumptions & risks: To the API there are definitely rate limits, but in terms of the scrape since its just extracting from the http request that can be done whenever. Selector fragility was seen when the endpoint user here was changed to a premium endpoint. Therefore the coed here can only be guaranteed to work for AlphaVantage for only some time. Schema changes can be more likely than selector fragility due to endpoint changes, but they are still unlikely considering I only use a handful of columns\n",
-    "\n"
+    "## Documentation & Insights\n",
+    "- API: `https://www.alphavantage.co/query` (TIME_SERIES_DAILY, `AAPL`, `compact`). Free tier enforces strict rate limits; batch downstream processing to avoid retries.\n",
+    "- Scrape: `https://finance.yahoo.com/gainers`. Fields are volatile; treat scraped columns as soft schema and validate per run.\n",
+    "- Persistence: Timestamped filenames under `data/raw/` enable reproducibility and backfills.\n",
+    "- Practical insight: For downstream modeling, join API `close` prices with scraped tickers by trading day. Use scrape only for qualitative features (e.g., intraday momentum proxy) due to schema instability.\n"
    ]
   }
  ],
