--- a/project/notebooks/data_preprocessing.ipynb
+++ b/project/notebooks/data_preprocessing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -29,7 +29,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
+    "from src import cleaning\n",
     "# Define folder paths relative to this notebook\n",
     "raw_dir = '../data/raw'\n",
     "processed_dir = '../data/processed'\n",
@@ -64,30 +64,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework Starter — Stage 6: Data Preprocessing\n",
-    "Use this notebook to apply your cleaning functions and save processed data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from src import cleaning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Load Raw Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +180,7 @@
        "6  41.0  49000.0   0.79    94105  San Francisco         NaN"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +302,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.500000</td>\n",
        "      <td>0.6250</td>\n",
        "      <td>0.650</td>\n",
        "      <td>12345</td>\n",
@@ -347,11 +329,11 @@
        "2  0.000000  0.0000  0.805    60614        Chicago         NaN\n",
        "3  1.000000  1.0000  0.760    94103             SF         NaN\n",
        "4  0.428571  0.6250  0.880    73301         Austin         NaN\n",
-       "5       NaN  0.6250  0.650    12345        Unknown         5.0\n",
+       "5  0.500000  0.6250  0.650    12345        Unknown         5.0\n",
        "6  0.571429  0.4375  0.790    94105  San Francisco         NaN"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
