--- a/project/notebooks/data_storage.ipynb
+++ b/project/notebooks/data_storage.ipynb
@@ -5,14 +5,14 @@
    "id": "05bb4482",
    "metadata": {},
    "source": [
-    "# Homework Starter — Stage 05: Data Storage\n",
-    "Name: \n",
+    "# Project — Data Storage\n",
+    "Owner: \n",
     "Date: \n",
     "\n",
-    "Objectives:\n",
-    "- Env-driven paths to `data/raw/` and `data/processed/`\n",
-    "- Save CSV and Parquet; reload and validate\n",
-    "- Abstract IO with utility functions; document choices"
+    "## Goals\n",
+    "- Configure env-driven paths for `data/raw/` and `data/processed/`.\n",
+    "- Save CSV and Parquet; reload and validate with strict dtypes.\n",
+    "- Provide reusable IO utilities and document tradeoffs."
    ]
   },
   {
@@ -50,7 +50,7 @@
    "metadata": {},
    "source": [
     "## 1) Create or Load a Sample DataFrame\n",
-    "You may reuse data from prior stages or create a small synthetic dataset."
+    "Use a small synthetic dataset or reuse prior raw files to test IO paths and validations."
    ]
   },
   {
@@ -146,9 +146,9 @@
    "id": "1b5fb79a",
    "metadata": {},
    "source": [
-    "## 2) Save CSV to data/raw/ and Parquet to data/processed/ (TODO)\n",
-    "- Use timestamped filenames.\n",
-    "- Handle missing Parquet engine gracefully."
+    "## 2) Persist Files\n",
+    "- Save CSV to `data/raw/` and Parquet to `data/processed/` using timestamped filenames.\n",
+    "- Handle missing Parquet engine gracefully with a clear error and continue pipeline."
    ]
   },
   {
@@ -191,8 +191,9 @@
    "id": "502af70d",
    "metadata": {},
    "source": [
-    "## 3) Reload and Validate (TODO)\n",
-    "- Compare shapes and key dtypes."
+    "## 3) Reload and Validate\n",
+    "- Compare shapes and key dtypes.\n",
+    "- Ensure `date` is datetime-like and price columns are numeric."
    ]
   },
   {
@@ -245,9 +246,10 @@
    "id": "a86f763d",
    "metadata": {},
    "source": [
-    "## 4) Utilities (TODO)\n",
+    "## 4) Utilities\n",
     "- Implement `detect_format`, `write_df`, `read_df`.\n",
-    "- Use suffix to route; create parent dirs if needed; friendly errors for Parquet."
+    "- Route by suffix; create parent dirs; provide friendly errors for missing Parquet engine.\n",
+    "- Prefer explicit dtype parsing on CSV read (e.g., `parse_dates=['date']`)."
    ]
   },
   {
@@ -304,9 +306,10 @@
    "id": "c150700c",
    "metadata": {},
    "source": [
-    "## 5 Documentation\n",
-    "- Validation checks include comparing df after and saving for both pq and csv (validate_loaded).  \n",
-    "- Assumptions include parquet is working properly (proper installation needed) and any data typing done through parquet over CSV is correct (implicit vs explicit).\n"
+    "## Documentation & Insights\n",
+    "- Storage strategy: CSV for portability, Parquet for efficient analytics; both stored with timestamps to enable lineage.\n",
+    "- Validation: Compare shapes and critical dtypes on reload; fail fast on schema drift.\n",
+    "- Practical insight: Prefer Parquet in downstream notebooks to reduce IO and preserve dtypes; fall back to CSV for interchange or when pyarrow is unavailable.\n"
    ]
   }
  ],
